--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
+        <!-- https://github.com/everit-org/json-schema -->
+        <dependency>
+            <groupId>com.doctusoft</groupId>
+            <artifactId>json-schema-java7</artifactId>
+            <version>1.4.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
